Authentication issuse solved 1

--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ MONGODB_URI=mongodb+srv://sanketrathod7420:sanketrathod7420@cluster0.j0tdx.mongo
 # JWT Secret
 JWT_SECRET=taskflowsecretkey2025
 
-# VITE_BACKEND_URL=https://taskview-backend.onrender.com
-# VITE_FRONTEND_URL=https://taskview.vercel.app
+VITE_BACKEND_URL=https://taskview-backend.onrender.com
+VITE_FRONTEND_URL=https://taskview.vercel.app
 
 
-VITE_BACKEND_URL=http://localhost:8000
-VITE_FRONTEND_URL=http://localhost:5173
+# VITE_BACKEND_URL=http://localhost:8000
+# VITE_FRONTEND_URL=http://localhost:5173
